force-app/main/default/objects/OCLQS_SharingBatchConfig__mdt/OCLQS_SharingBatchConfig__mdt.object-meta.xml
<CustomObject>
    <label>Sharing Batch Config</label>
    <pluralLabel>Sharing Batch Configs</pluralLabel>
</CustomObject>