force-app/main/default/objects/OCLQS_SharingBatchConfig__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>