force-app/main/default/objects/OCLQS_SharingBatchConfig__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <type>TextArea</type>
</CustomField>