force-app/main/default/objects/OCLQS_SharingBatchConfig__mdt/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObject Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>